# hackathon_distillation

./: .env  .gitignore  README.md  pyproject.toml  train_policy.py
01-simpleDepth/: main.py
02-expertBehavior/: main.py  z.log.global
03-robot/: main.py
config/: depth_anything_mlp.yaml  depth_ddpm.yaml  depth_flow.yaml  mlp.yaml  mlp_img_only.yaml  mlp_masked_depth.yaml  test.yaml
config/image_transforms/: default.yaml
devel/: 01-simpleDepth.py  02-expertBehavior.py  04-camera.py  05-replay.py  06-yolo-alone.py  06-yolo.py  07-val.py  08-blob_test.py  09-cv-baseline.py  09-cv2-baseline.py  10-realsense.py
outputs/2025-10-28/14-26-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-28/14-26-24/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-28/14-26-59/.hydra/: hydra.yaml
outputs/2025-10-28/14-27-45/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-28/14-29-19/.hydra/: hydra.yaml
outputs/2025-10-28/14-29-41/.hydra/: hydra.yaml
outputs/2025-10-28/14-50-21/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-28/14-58-39/.hydra/: hydra.yaml
outputs/2025-10-28/14-59-01/.hydra/: config.yaml  hydra.yaml
scripts/: data_generation.py  data_gneration.py
src/hackathon_distillation/: __init__.py  data_helper.py  expert_behavior.py  h5_helper.py  masker.py  scene.py
src/hackathon_distillation/data_loader/: compute_stats.py  dataset.py  main.py  pytorch_util.py  replay_buffer.py  sampler.py
src/hackathon_distillation/dataset/: compute_stats.py  dataset.py  pytorch_util.py  replay_buffer.py  sampler.py
src/hackathon_distillation/networks/: Conditional1DUnet.py  base_models.py  da_encoder.py  ddpm_rgb_encoder.py  depth_encoder.py  unet.py
src/hackathon_distillation/policy/: ModelWrapperABC.py  __init__.py  policy.py  synth_dataset.py  trainer.py
src/hackathon_distillation/utils/: transforms.py  utils_cornelius.py
(+48 files in other folders)
