[project]
name = "hackathon-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayantan Auddy", email = "auddy@tu-berlin.de" }
]
requires-python = ">=3.10"
dependencies = [
    "robotic==0.3.4.dev3"
]

[project.scripts]
hackathon-distillation = "hackathon_distillation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
