[project]
name = "hackathon-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayantan Auddy", email = "auddy@tu-berlin.de" }
]
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "python-dotenv>=1.2.1",
    "robotic==0.3.4.dev4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
hackathon-distillation = "hackathon_distillation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
